TEXT TO AI IMAGE

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                     // --- IMPORTANT ---
                     // Your new API key has been inserted.
-                    const apiKey = "sk-gMmMhAYNxN11EHPfawKFdEHsiWptDcJekdKcZZ8nmzmIx2nO"; 
+                    const apiKey = "ENTER YOUR API"; 
                     const apiUrl = `https://api.stability.ai/v2beta/stable-image/generate/${selectedModel}`;
 
                     const formData = new FormData();
