--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                     // --- IMPORTANT ---
                     // Your new API key has been inserted.
-                    const apiKey = "ENTER YOUR API"; 
+                    const apiKey = "SoXn6ogOnx6tnE5eVQYeNd3iJfBxGqXgqVi1DzLrIOJH83P3slBUZxnikrDz"; 
                     const apiUrl = `https://api.stability.ai/v2beta/stable-image/generate/${selectedModel}`;
 
                     const formData = new FormData();
