--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                     console.log(`Generating image with model: ${selectedModel}`);
 
                     // --- IMPORTANT ---
-                    // Your new API key has been inserted.
-                    const apiKey = "SoXn6ogOnx6tnE5eVQYeNd3iJfBxGqXgqVi1DzLrIOJH83P3slBUZxnikrDz"; 
+                    // You must replace this placeholder with a valid Stability AI key that has credits.
+                    const apiKey = "sk-1WCDR9Lhk4BohIRUHu2OHVcU4QEidkUZbBWZPghnlmvQv1yF"; 
                     const apiUrl = `https://api.stability.ai/v2beta/stable-image/generate/${selectedModel}`;
 
                     const formData = new FormData();
@@ -180,7 +180,9 @@
             }
 
             function hideError() {
-                errorBox.classList.add('hidden');
+                if (errorBox) {
+                   errorBox.classList.add('hidden');
+                }
             }
         });
     </script>
